kubernetes/apps/network/echo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-frostlink
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - echo.frostlink.dev
  parentRefs:
    - name: edge-gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: echo
          port: 80
